--- a/mary-ui-bootcamp/composer.json
+++ b/mary-ui-bootcamp/composer.json
@@ -11,7 +11,10 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.5",
+        "livewire/volt": "^1.6",
+        "robsontenorio/mary": "^1.41"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
